# crypto-forecast

./: .gitignore  BYBIT_MIGRATION_SUMMARY.md  README.md  pip_output.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements_server.txt  reset_trading_state.bat  run_client.bat  run_integration_tests.bat  run_integration_tests.ps1  run_server.bat  server_restart.err  test_bybit.py  vacuum_db.bat
.windsurf/plans/: bybit-credentials-storage-77a1b4.md  remove-ib-stock-dead-code-c069f8.md
docs/: BYBIT_SETUP.md  CHANGES_SUMMARY.md  META_LABELING.md  NEWS_FADE_PLAN.md  PROJECT_DOCUMENTATION.md  PROMPT_WITH_CANDLES.md  REFACTOR_PLAN.md  crypto-forecast-bybit-clone-591c7b.md
docs/archives/: ORDER_QUEUE_CLEANUP_SETUP.md  order-queue-cleanup-settings.md
scripts/: bootstrap.py
scripts/client/: activity_runtime.py  api_client.py  consensus_trade_status.py  constants.py  gui_main.py  main.py  table_colors.py
scripts/core/: actuals_evaluator.py  ai_client.py  app_context.py  bybit_account_sync.py  bybit_capital_provider.py  bybit_client.py  bybit_config.py  bybit_data_loader.py  bybit_instrument.py  bybit_migrate.py  bybit_order_manager.py  bybit_order_status_sync.py  bybit_transaction_log_sync.py  bybit_unified_wallet.py  bybit_worker.py  bybit_ws_client.py  config.py  consensus.py  consensus_evaluator.py  consensus_recalc.py  consensus_settings.py  data_manager.py  forecast_engine.py  forecast_runner.py  kelly_sizing.py  mae_mfe.py  market_context.py  market_regime.py  migrate.py  multi_model_forecaster.py  notification_manager.py  position_sizer.py  scheduler.py  (+3 more)
(+175 files in other folders)
